Bug 456484.  Kids of an inline-block that has overflow:'something other than visible' should not necessarily shrink-wrap.  r+sr=roc
UltraBlame original commit: d28eb3aa049df458ea1c77fa6778624adcd36b1f

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -143,7 +143,9 @@
 *|*::-moz-scrolled-page-sequence {
   
   padding: inherit;
-  display: inherit;
+  
+
+  display: block;
   -moz-box-orient: inherit;
   
 
